# raytracer

./: .gitignore  CMakeLists.txt  OBJ-files.md  box  camera.cpp  camera.h  color.h  diffuse.cpp  glass.cpp  hit.cpp  hit.h  input  input-triangles-100  material.cpp  material.h  metallic.cpp  notes.md  parser.cpp  parser.h  perf.data  perf.data.old  performance-input  pixels.cpp  pixels.h  pyramid  random.cpp  random.h  ray.cpp  sphere.cpp  sphere.h  test-camera.cpp  test-intersect.cpp  test-materials-parser.cpp  test-materials.cpp  test-pixels.cpp  test-world.cpp  textures-input  timer.cpp  timer.h  triangles-100  (+5 more)
final-project/: OBJ-files.md  final-input  jedi-outcast
input-files/: final-input  input  input-fog  marble-input  marbles-input  triangles-input
performance-report/: desktop.ini  performance.md
random-generators/: bvh-runtime.csv  generate-spheres.py  generate-triangles.py  input-spheres-1000  world-runtime.csv
src/: CMakeLists.txt  camera.cpp  camera.h  parser.cpp  parser.h  world.cpp  world.h
src/core/: CMakeLists.txt  aabb.cpp  aabb.h  bvh.cpp  bvh.h  color.h  constants.h  hit.cpp  hit.h  material.cpp  material.h  noise.h  object.h  random.cpp  random.h  ray.h  texture.h  vector3d.cpp  xorshiro256.cpp  xorshiro256.h
src/image/: pixels.cpp  pixels.h
src/materials/: CMakeLists.txt  diffuse.cpp  diffuse.h  glass.cpp  glass.h  isotropic.cpp  isotropic.h  lambertian.cpp  metallic.cpp  metallic.h  specular.cpp
src/objects/: constant_medium.cpp  constant_medium.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/textures/: CMakeLists.txt  checkerboard.cpp  checkerboard.h  gradient.cpp  gradient.h  image.cpp  image.h  interesting.cpp  interesting.h  marble.cpp  marble.h  solid.cpp  solid.h  spiral.cpp  spiral.h  surface-normal.cpp  surface-normal.h
test/: CMakeLists.txt  test-bvh-chart.cpp  test-bvh.cpp  test-camera-individual.cpp  test-camera.cpp  test-fog.cpp  test-materials-parser.cpp  test-materials.cpp  test-random.cpp  test-rectangle.cpp  test-textures.cpp  test-triangle.cpp  test-vector3d.cpp  test-world-chart.cpp
